Rm WpmDropdown component and align Start + Stop btns

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
   color: #e5e5e5;
   font-size: 16px;
   height: 200px;
+  margin-bottom: 5px;
   outline: none;
   padding: 10px;
   resize: none;
@@ -51,13 +52,17 @@ body {
   font-size: inherit;
   font-weight: 700;
   letter-spacing: 1px;
-  margin: 15px 15px 0 0;
+  margin: 15px 0 0 0;
   outline: none;
   padding: 15px 60px;
   position: relative;
   text-transform: uppercase;
   transition: all 0.3s;
-  width: 190px;
+  width: 292.5px;
+}
+
+.btn:first-of-type {
+  margin-right: 15px;
 }
 
 #output {
@@ -67,24 +72,6 @@ body {
   margin: 100px auto 0 auto;
   text-align: center;
   width: 50%;
-}
-
-#wpm-dropdown {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  background: none;
-  border-radius: 3px;
-  border: 3px solid #FF3366;
-  color: #FF3366;
-  font-family: inherit;
-  font-size: inherit;
-  height: 61px;
-  outline: none;
-  text-align-last: center;
-  text-align: -webkit-center;
-  text-transform: uppercase;
-  width: 190px;
 }
 
 #word-container {
